--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ ul {
 }
 
 body {
-	background-image: url("gifs/highQuality.gif");
+	background-image: url("highQualityHH.gif");
 	background-size: cover;
 	background-position: 0% 23%;
 }
